--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cbsodata": "github:statmine/cbsodata.js",
     "react": "^0.14.7",
     "react-dom": "^0.14.7"
   },
