--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "cbsodata": "github:statmine/cbsodata.js",
     "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "react-dom": "^0.14.7",
+    "react-router": "^2.4.1"
   },
   "devDependencies": {
     "babel-core": "^6.7.6",
