--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --progress --colors -d",
+    "start": "webpack-dev-server --colors --progress -d",
     "build": "webpack"
   },
   "author": "",
