--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "statminer",
-  "version": "0.0.0",
+  "version": "0.5.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --colors --progress -d",
-    "build": "webpack"
+    "build": "webpack",
+    "css": "node-sass"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Edwin de Jonge, Jan van der Laan",
+  "license": "GPL-2",
   "dependencies": {
     "cbsodata": "github:statmine/cbsodata.js",
     "react": "^0.14.7",
