--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --colors --progress -d",
     "build": "webpack",
-    "css": "node-sass"
+    "css": "node-sass --output css css"
   },
   "author": "Edwin de Jonge, Jan van der Laan",
   "license": "GPL-2",
@@ -23,6 +23,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "node-sass": "^3.8.0",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
   }
