--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "cbsodata": "github:statmine/cbsodata.js",
     "react": "^0.14.7",
+    "react-dimensions": "^1.3.0",
     "react-dom": "^0.14.7",
     "react-router": "^2.4.1",
     "react-select": "^1.0.0-beta13"
