--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --colors --progress -d",
     "build": "webpack",
-    "css": "node-sass --output css css"
+    "css": "node-sass --output css css",
+    "csswatch": "node-sass --watch --output css css"
   },
   "author": "Edwin de Jonge, Jan van der Laan",
   "license": "GPL-2",
   "dependencies": {
-    "cbsodata": "github:statmine/cbsodata.js",
+    "cbsodata": "statmine/cbsodata.js",
     "react": "^0.14.7",
     "react-dimensions": "^1.3.0",
     "react-dom": "^0.14.7",
