--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run build",
     "start": "webpack-dev-server --colors --progress -d",
     "build": "webpack",
     "css": "node-sass --output css css",
