--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^0.14.7",
     "react-dimensions": "^1.3.0",
     "react-dom": "^0.14.7",
+    "react-input-autosize": "^1.1.0",
     "react-router": "^2.4.1",
     "react-select": "^1.0.0-beta13"
   },
