--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "eslint-plugin-react": "^5.2.2",
     "node-sass": "^3.8.0",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
