--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "cbsodata": "statmine/cbsodata.js",
+    "debounce": "^1.0.0",
     "react": "^0.14.7",
     "react-dimensions": "^1.3.0",
     "react-dom": "^0.14.7",
