--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   "dependencies": {
     "cbsodata": "statmine/cbsodata.js",
     "debounce": "^1.0.0",
-    "react": "^0.14.7",
+    "react": "^15.3.1",
+    "react-addons-shallow-compare": "^15.3.1",
     "react-dimensions": "^1.3.0",
-    "react-dom": "^0.14.7",
+    "react-dom": "^15.3.1",
     "react-input-autosize": "^1.1.0",
     "react-router": "^2.4.1",
-    "react-select": "^1.0.0-beta13"
+    "react-select": "^1.0.0-beta14",
+    "react-virtualized-select": "^1.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.7.6",
