--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "coffee-script": "^1.10.0",
     "eslint": "^3.3.0",
     "eslint-plugin-react": "^5.2.2",
     "node-sass": "^3.8.0",
