--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint": "^3.3.0",
     "eslint-plugin-react": "^5.2.2",
     "node-sass": "^3.8.0",
+    "react-virtualized": "^7.22.2",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
   }
