--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dimensions": "^1.3.0",
     "react-dom": "^15.3.1",
     "react-input-autosize": "^1.1.0",
+    "react-input-range": "^0.9.2",
     "react-router": "^2.4.1",
     "react-select": "^1.0.0-beta14",
     "react-virtualized-select": "^1.3.0"
