--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "coffee-script": "^1.10.0",
     "eslint": "^3.3.0",
     "eslint-plugin-react": "^5.2.2",
+    "json-loader": "^0.5.4",
     "node-sass": "^3.8.0",
     "react-virtualized": "^7.22.2",
     "webpack": "^1.13.0",
