--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "react-input-autosize": "^1.1.0",
     "react-router": "^2.4.1",
     "react-select": "^1.0.0-beta14",
-    "react-virtualized-select": "^1.3.0",
-    "rest": "^2.0.0"
+    "react-virtualized-select": "^1.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.7.6",
