--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,9 @@ env:
   browser: true
   commonjs: true
   es6: true
-extends: 'eslint:recommended'
+extends: 
+- 'eslint:recommended'
+- 'plugin:react/recommended'
 parserOptions:
   ecmaFeatures:
     experimentalObjectRestSpread: true
